// Solar start - update licenser
plugins {
    id 'org.cadixdev.licenser' version '0.6.1'
}
// Solar end

defaultTasks 'licenseFormat', 'build'

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
//    apply plugin: 'net.minecrell.licenser' // Solar

    group = 'me.lucko.luckperms'
    version = '5.3-SNAPSHOT'

    sourceCompatibility = 16
    targetCompatibility = 16

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    jar {
        from '../LICENSE.txt'
    }

    def determinePatchVersion = {
// Solar start
        return "SNAPSHOT" 
    }
/*
        // get the name of the last tag
        def tagInfo = new ByteArrayOutputStream()
        exec {
            commandLine 'git', 'describe', '--tags'
            standardOutput = tagInfo
        }
        tagInfo = tagInfo.toString()

        if (!tagInfo.contains('-')) {
            return 0
        }
        return tagInfo.split("-")[1]
    }
*/ // Solar

    project.ext.majorVersion = '5'
    project.ext.minorVersion = '3'
    project.ext.patchVersion = determinePatchVersion()
    project.ext.apiVersion = project.ext.majorVersion + '.' + project.ext.minorVersion
    project.ext.fullVersion = project.ext.apiVersion + '.' + project.ext.patchVersion

    license {
        header = rootProject.file('HEADER.txt')
        include '**/*.java'
        newLine = true
    }

    repositories {
        mavenCentral()
        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
//        maven { url 'https://repo.lucko.me/' }
        maven { url "https://mvn-repo.solarmc.gg/releases" }
        maven { url "https://mvn-repo.solarmc.gg/snapshots" }
        maven { url "https://mvn-repo.arim.space/lesser-gpl3" }
    }

// Solar start
    dependencies {
        modules {
            module("com.mojang:brigadier") {
                replacedBy("gg.solarmc:brigadier")
            }
        }
    }
// Solar end
}
